[package]
name = "solana-nostd-sha256"
authors = ["Dean Little <@deanmlittle>"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
default = ["hmac"]
hmac = []

[dependencies]
sha2 = { version = "0.10.8", optional = true }

[dev-dependencies]
hex = "0.4.3"
mollusk-svm = "0.0.0"

[target.'cfg(not(target_os = "solana"))'.dependencies]
sha2 = { version = "0.10.8" }