[package]
name = "solana-nostd-sha256"
authors = ["Dean Little <@deanmlittle>"]
description = "A more efficient implementation of Sha256 for SVM"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
sha2 = { version = "0.10.8", optional = true }

[dev-dependencies]
hex = "0.4.3"

[target.'cfg(not(target_os = "solana"))'.dependencies]
sha2 = { version = "0.10.8" }